--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "Token": "90091788682644557:0:76Uijte8kBnl3KsuqesVUVDWJ9GUgc",
-    "URI": "wss://d1.nandbox.net:5020/nandbox/api/",
-    "DownloadServer": "https://d1.nandbox.net:5020/nandbox/download/",
-    "UploadServer": "https://d1.nandbox.net:5020/nandbox/upload/",
+    "Token": "90092464106893570:0:ZZgD6G8u2JZfSPIQSvLrvEZF4As4DY",
+    "URI": "wss://w1.nandbox.net:5020/nandbox/api/",
+    "DownloadServer": "https://w1.nandbox.net:5020/nandbox/download/",
+    "UploadServer": "https://w1.nandbox.net:5020/nandbox/upload/",
     "MaxLogSize": "10kb",
     "NumberOfLogFiles":"5",
     "LogLevel": "Debug",
